--- a/src/pages/blog/index.astro
+++ b/src/pages/blog/index.astro
@@ -1,11 +1,12 @@
 ---
 import { getCollection } from 'astro:content';
 
-import BaseHead from '../../components/BaseHead.astro';
-import Footer from '../../components/Footer.astro';
-import FormattedDate from '../../components/FormattedDate.astro';
-import Header from '../../components/Header.astro';
-import { SITE_DESCRIPTION, SITE_TITLE } from '../../consts';
+import BaseHead from '~/components/BaseHead.astro';
+import Footer from '~/components/Footer.astro';
+import FormattedDate from '~/components/FormattedDate.astro';
+import Header from '~/components/Header.astro';
+import { SITE_DESCRIPTION, SITE_TITLE } from '~/consts';
+import { getPostPath } from '~/lib/posts';
 
 const posts = (await getCollection('blog')).sort(
 	(a, b) => b.data.pubDate.valueOf() - a.data.pubDate.valueOf(),
@@ -94,7 +95,7 @@ const posts = (await getCollection('blog')).sort(
 					{
 						posts.map((post) => (
 							<li>
-								<a href={`/blog/${post.id}/`}>
+								<a href={getPostPath(post)}>
 									<img alt="" height={360} src={post.data.heroImage} width={720} />
 									<h4 class="title">{post.data.title}</h4>
 									<p class="date">
