--- a/src/layouts/BaseLayout.astro
+++ b/src/layouts/BaseLayout.astro
@@ -1,18 +1,23 @@
 ---
-import BaseHead from '../components/BaseHead.astro';
-import Footer from '../components/Footer.astro';
-import Header from '../components/Header.astro';
+import BaseHead from '~/components/BaseHead.astro';
+import Footer from '~/components/Footer.astro';
+import Header from '~/components/Header.astro';
+import { SITE_DESCRIPTION, SITE_TITLE } from '~/consts';
 
-const { description, title } = Astro.props
+const {
+	className = '',
+	description = SITE_DESCRIPTION,
+	title = SITE_TITLE,
+} = Astro.props;
 ---
 
 <html lang="en">
 	<head>
 		<BaseHead description={description} title={title} />
 	</head>
-	<body>
+	<body class="bg-black text-white text-lg px-4">
 		<Header />
-		<main>
+		<main class:list={['xl:max-w-screen-xl mx-auto', className]}>
 			<slot />
 		</main>
 		<Footer />
