--- a/src/layouts/BlogPost.astro
+++ b/src/layouts/BlogPost.astro
@@ -11,17 +11,22 @@ const { description, heroImage, pubDate, title, updatedDate } = Astro.props;
 
 <BaseLayout description={description} title={title}>
 	<article>
-		<div class="hero-image">
-			{heroImage && <img alt="" height={510} src={heroImage} width={1020} />}
+		<div>
+			{
+				heroImage && (
+					<img alt="" height={510} src={heroImage} width={1020} />
+				)
+			}
 		</div>
-		<div class="prose">
-			<div class="title">
-				<div class="date">
+		<div>
+			<div>
+				<div>
 					<FormattedDate date={pubDate} />
 					{
 						updatedDate && (
-							<div class="last-updated-on">
-								Last updated on <FormattedDate date={updatedDate} />
+							<div>
+								Last updated on{' '}
+								<FormattedDate date={updatedDate} />
 							</div>
 						)
 					}
