--- a/src/pages/blog/index.astro
+++ b/src/pages/blog/index.astro
@@ -1,11 +1,8 @@
 ---
 import { getCollection } from 'astro:content';
 
-import BaseHead from '~/components/BaseHead.astro';
-import Footer from '~/components/Footer.astro';
 import FormattedDate from '~/components/FormattedDate.astro';
-import Header from '~/components/Header.astro';
-import { SITE_DESCRIPTION, SITE_TITLE } from '~/consts';
+import BaseLayout from '~/layouts/BaseLayout.astro';
 import { getPostPath } from '~/lib/posts';
 
 const posts = (await getCollection('blog')).sort(
@@ -13,32 +10,23 @@ const posts = (await getCollection('blog')).sort(
 );
 ---
 
-<!doctype html>
-<html lang="en">
-	<head>
-		<BaseHead description={SITE_DESCRIPTION} title={SITE_TITLE} />
-	</head>
-	<body>
-		<Header />
-		<main>
-			<section>
-				<ul>
-					{
-						posts.map((post) => (
-							<li>
-								<a href={getPostPath(post)}>
-									<img alt="" height={360} src={post.data.heroImage} width={720} />
-									<h4 class="title">{post.data.title}</h4>
-									<p class="date">
-										<FormattedDate date={post.data.pubDate} />
-									</p>
-								</a>
-							</li>
-						))
-					}
-				</ul>
-			</section>
-		</main>
-		<Footer />
-	</body>
-</html>
+<BaseLayout title="Blog posts">
+	{
+		posts.map((post) => (
+			<li>
+				<a href={getPostPath(post)}>
+					<img
+						alt=""
+						height={360}
+						src={post.data.heroImage}
+						width={720}
+					/>
+					<h4>{post.data.title}</h4>
+					<p>
+						<FormattedDate date={post.data.pubDate} />
+					</p>
+				</a>
+			</li>
+		))
+	}
+</BaseLayout>
