--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -1,50 +1,59 @@
 ---
-import BaseHead from '../components/BaseHead.astro';
-import Footer from '../components/Footer.astro';
-import Header from '../components/Header.astro';
-import { SITE_DESCRIPTION, SITE_TITLE } from '../consts';
+import { getCollection } from 'astro:content';
+
+import FormattedDate from '~/components/FormattedDate.astro';
+import BaseLayout from '~/layouts/BaseLayout.astro';
+import { getPostPath } from '~/lib/posts';
+
+const posts = (await getCollection('blog')).sort(
+	(a, b) => b.data.pubDate.valueOf() - a.data.pubDate.valueOf(),
+);
 ---
 
-<!doctype html>
-<html lang="en">
-	<head>
-		<BaseHead description={SITE_DESCRIPTION} title={SITE_TITLE} />
-	</head>
-	<body>
-		<Header />
-		<main>
-			<h1>🧑‍🚀 Hello, Astronaut!</h1>
-			<p>
-				Welcome to the official <a href="https://astro.build/">Astro</a> blog starter template. This
-				template serves as a lightweight, minimally-styled starting point for anyone looking to build
-				a personal website, blog, or portfolio with Astro.
-			</p>
-			<p>
-				This template comes with a few integrations already configured in your
-				<code>astro.config.mjs</code> file. You can customize your setup with
-				<a href="https://astro.build/integrations">Astro Integrations</a> to add tools like Tailwind,
-				React, or Vue to your project.
-			</p>
-			<p>Here are a few ideas on how to get started with the template:</p>
-			<ul>
-				<li>Edit this page in <code>src/pages/index.astro</code></li>
-				<li>Edit the site header items in <code>src/components/Header.astro</code></li>
-				<li>Add your name to the footer in <code>src/components/Footer.astro</code></li>
-				<li>Check out the included blog posts in <code>src/content/blog/</code></li>
-				<li>Customize the blog post page layout in <code>src/layouts/BlogPost.astro</code></li>
-			</ul>
-			<p>
-				Have fun! If you get stuck, remember to <a href="https://docs.astro.build/"
-					>read the docs
-				</a> or <a href="https://astro.build/chat">join us on Discord</a> to ask questions.
-			</p>
-			<p>
-				Looking for a blog template with a bit more personality? Check out <a
-					href="https://github.com/Charca/astro-blog-template"
-					>astro-blog-template
-				</a> by <a href="https://twitter.com/Charca">Maxi Ferreira</a>.
-			</p>
-		</main>
-		<Footer />
-	</body>
-</html>
+<BaseLayout>
+	<h1 class="text-4xl mb-10 mt-20">Howdy, I'm Echo!</h1>
+	<p class="my-4">
+		This is my website where I put some of my writings and other personal
+		things. I am a web engineer, Jewish, trans and queer, goth, and a
+		LARPer. I live in Berlin with my two kitties Molly and Missy.
+	</p>
+	<p class="my-4">
+		Feel free to browse around or look me up on various social media:
+	</p>
+	<ul class="flex gap-4 my-4">
+		<li>
+			<a href="https://bsky.app/profile/echo.ishella.gay" rel="me"
+				>Bluesky</a
+			>
+		</li>
+		<li><a href="https://tech.lgbt/@chaosexanima" rel="me">Mastodon</a></li>
+		<li>
+			<a href="https://instagram.com/chaosexanima" rel="me noreferrer"
+				>Instagram</a
+			>
+		</li>
+	</ul>
+	<h2 class="text-3xl mb-4 mt-10">My Writing</h2>
+	<ul class="grid gap-4 sm:grid-cols-2 md:grid-cols-3">
+		{
+			posts.map((post) => (
+				<li>
+					<a href={getPostPath(post)}>
+						<h4 class="font-light text-3xl mb-4">
+							{post.data.title}
+						</h4>
+						<img
+							alt=""
+							height={360}
+							src={post.data.heroImage}
+							width={720}
+						/>
+						<p class="mt-4">
+							<FormattedDate date={post.data.pubDate} />
+						</p>
+					</a>
+				</li>
+			))
+		}
+	</ul>
+</BaseLayout>
