--- a/src/pages/blog/index.astro
+++ b/src/pages/blog/index.astro
@@ -1,32 +1,9 @@
 ---
-import { getCollection } from 'astro:content';
-
-import FormattedDate from '~/components/FormattedDate.astro';
+import PostList from '~/components/PostList.astro';
 import BaseLayout from '~/layouts/BaseLayout.astro';
-import { getPostPath } from '~/lib/posts';
-
-const posts = (await getCollection('blog')).sort(
-	(a, b) => b.data.pubDate.valueOf() - a.data.pubDate.valueOf(),
-);
 ---
 
 <BaseLayout title="Blog posts">
-	{
-		posts.map((post) => (
-			<li>
-				<a href={getPostPath(post)}>
-					<img
-						alt=""
-						height={360}
-						src={post.data.heroImage}
-						width={720}
-					/>
-					<h4>{post.data.title}</h4>
-					<p>
-						<FormattedDate date={post.data.pubDate} />
-					</p>
-				</a>
-			</li>
-		))
-	}
+	<h1 class="text-4xl mb-10 mt-20">My Writings</h1>
+	<PostList />
 </BaseLayout>
