--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -1,13 +1,6 @@
 ---
-import { getCollection } from 'astro:content';
-
-import FormattedDate from '~/components/FormattedDate.astro';
+import PostList from '~/components/PostList.astro';
 import BaseLayout from '~/layouts/BaseLayout.astro';
-import { getPostPath } from '~/lib/posts';
-
-const posts = (await getCollection('blog')).sort(
-	(a, b) => b.data.pubDate.valueOf() - a.data.pubDate.valueOf(),
-);
 ---
 
 <BaseLayout>
@@ -15,45 +8,26 @@ const posts = (await getCollection('blog')).sort(
 	<p class="my-4">
 		This is my website where I put some of my writings and other personal
 		things. I am a web engineer, Jewish, trans and queer, goth, and a
-		LARPer. I live in Berlin with my two kitties Molly and Missy.
+		LARPer. My pronouns are xhe/xer. I live in Berlin with my two kitties
+		Molly and Missy.
 	</p>
 	<p class="my-4">
 		Feel free to browse around or look me up on various social media:
 	</p>
 	<ul class="flex gap-4 my-4">
 		<li>
-			<a href="https://bsky.app/profile/echo.ishella.gay" rel="me"
-				>Bluesky</a
-			>
+			<a href="https://bsky.app/profile/echo.ishella.gay" rel="me">
+				Bluesky
+			</a>
 		</li>
 		<li><a href="https://tech.lgbt/@chaosexanima" rel="me">Mastodon</a></li>
 		<li>
-			<a href="https://instagram.com/chaosexanima" rel="me noreferrer"
-				>Instagram</a
-			>
+			<a href="https://instagram.com/chaosexanima" rel="me noreferrer">
+				Instagram
+			</a>
 		</li>
 	</ul>
-	<h2 class="text-3xl mb-4 mt-10">My Writing</h2>
-	<ul class="grid gap-4 sm:grid-cols-2 md:grid-cols-3">
-		{
-			posts.map((post) => (
-				<li>
-					<a href={getPostPath(post)}>
-						<h4 class="font-light text-3xl mb-4">
-							{post.data.title}
-						</h4>
-						<img
-							alt=""
-							height={360}
-							src={post.data.heroImage}
-							width={720}
-						/>
-						<p class="mt-4">
-							<FormattedDate date={post.data.pubDate} />
-						</p>
-					</a>
-				</li>
-			))
-		}
-	</ul>
+	<h2 class="text-3xl mb-4 mt-10">Latest writings</h2>
+	<p class="my-4 font-light"><a href="/blog">See more&hellip;</a></p>
+	<PostList limit="3" />
 </BaseLayout>
