--- a/src/components/PostList.astro
+++ b/src/components/PostList.astro
@@ -1,4 +1,5 @@
 ---
+import { Image } from 'astro:assets';
 import { getCollection } from 'astro:content';
 
 import FormattedDate from '~/components/FormattedDate.astro';
@@ -6,24 +7,25 @@ import { getPostPath } from '~/lib/posts';
 
 const { limit = 9, offset = 0 } = Astro.props;
 const posts = (await getCollection('blog'))
-	.sort((a, b) => b.data.pubDate.valueOf() - a.data.pubDate.valueOf())
+	.sort((a, b) => b.data.date.valueOf() - a.data.date.valueOf())
 	.slice(offset, limit);
 ---
 
-<ul class="grid gap-4 sm:grid-cols-2 md:grid-cols-3">
+<ul class="grid gap-10 sm:grid-cols-2 md:grid-cols-3">
 	{
 		posts.map((post) => (
 			<li>
 				<a href={getPostPath(post)}>
 					<h4 class="font-thin text-3xl mb-4">{post.data.title}</h4>
-					<img
-						alt=""
-						height={360}
-						src={post.data.heroImage}
-						width={720}
-					/>
+					{post.data.coverImage && (
+						<Image
+							alt={`Image for post ${post.data.title}`}
+							class="object-cover h-80 image-filter rounded-md"
+							src={post.data.coverImage}
+						/>
+					)}
 					<p class="mt-4">
-						<FormattedDate date={post.data.pubDate} />
+						<FormattedDate date={post.data.date} />
 					</p>
 				</a>
 			</li>
