--- a/src/layouts/BaseLayout.astro
+++ b/src/layouts/BaseLayout.astro
@@ -15,7 +15,7 @@ const {
 	<head>
 		<BaseHead description={description} title={title} />
 	</head>
-	<body class="bg-black text-white text-lg px-4">
+	<body class="bg-black text-white text-lg">
 		<Header />
 		<main class:list={['xl:max-w-screen-xl mx-auto', className]}>
 			<slot />
