--- a/src/layouts/BlogPost.astro
+++ b/src/layouts/BlogPost.astro
@@ -1,40 +1,34 @@
 ---
 import type { CollectionEntry } from 'astro:content';
 
+import { Image } from 'astro:assets';
+
+import Prose from '~/components/Prose.astro';
+
 import FormattedDate from '../components/FormattedDate.astro';
 import BaseLayout from './BaseLayout.astro';
 
 type Props = CollectionEntry<'blog'>['data'];
 
-const { description, heroImage, pubDate, title, updatedDate } = Astro.props;
+const { coverImage, date, title } = Astro.props;
 ---
 
-<BaseLayout description={description} title={title}>
-	<article>
-		<div>
-			{
-				heroImage && (
-					<img alt="" height={510} src={heroImage} width={1020} />
-				)
-			}
-		</div>
-		<div>
-			<div>
-				<div>
-					<FormattedDate date={pubDate} />
-					{
-						updatedDate && (
-							<div>
-								Last updated on{' '}
-								<FormattedDate date={updatedDate} />
-							</div>
-						)
-					}
-				</div>
-				<h1>{title}</h1>
-				<hr />
+<BaseLayout className="" title={title}>
+	{
+		coverImage && (
+			<div class="absolute left-0 right-0 -z-10">
+				<Image alt="" class="image-filter w-screen" src={coverImage} />
+				<span class="block w-full absolute bottom-0 h-40 bg-gradient-to-b from-transparent to-black" />
 			</div>
+		)
+	}
+	<div class="pt-[20vh]">
+		<Prose className="bg-black p-10 rounded-t-md">
+			<h1 class="mb-0">{title}</h1>
+			<p class="italic font-light text-base mb-10">
+				<FormattedDate date={date} />
+			</p>
 			<slot />
-		</div>
-	</article>
+		</Prose>
+	</div>
 </BaseLayout>
