--- a/src/components/HeaderLink.astro
+++ b/src/components/HeaderLink.astro
@@ -9,7 +9,7 @@ const subpath = pathname.match(/[^\/]+/g);
 const isActive = href === pathname || href === '/' + (subpath?.[0] || '');
 ---
 
-<li class="text-xl font-light">
+<li class="text-xl font-light hover:text-violet-400 transition-colors">
 	<a class:list={[className, { active: isActive }]} href={href} {...props}>
 		<slot />
 	</a>
