--- a/src/components/PostList.astro
+++ b/src/components/PostList.astro
@@ -11,7 +11,7 @@ const posts = (await getCollection('blog'))
 	.slice(offset, limit);
 ---
 
-<ul class="grid gap-10 sm:grid-cols-2 md:grid-cols-3">
+<ul class="grid gap-10 md:grid-cols-2 lg:grid-cols-3">
 	{
 		posts.map((post) => (
 			<li>
