--- a/src/components/Prose.astro
+++ b/src/components/Prose.astro
@@ -5,7 +5,7 @@ const { className } = Astro.props;
 <article
 	class:list={[
 		'prose prose-invert prose-violet prose-xl prose-stone mx-auto',
-		'prose-headings:font-thin',
+		'prose-headings:font-thin hover:prose-a:text-violet-400 prose-a:transition-colors',
 		className,
 	]}
 >
