--- a/src/layouts/BaseLayout.astro
+++ b/src/layouts/BaseLayout.astro
@@ -17,9 +17,10 @@ const {
 	</head>
 	<body class="bg-black text-white text-lg">
 		<Header />
-		<main class:list={['xl:max-w-screen-xl mx-auto', className]}>
+		<main class:list={['xl:max-w-screen-xl mx-auto px-10', className]}>
 			<slot />
 		</main>
 		<Footer />
+		<slot name="end" />
 	</body>
 </html>
