--- a/src/layouts/BlogPost.astro
+++ b/src/layouts/BlogPost.astro
@@ -13,22 +13,27 @@ type Props = CollectionEntry<'blog'>['data'];
 const { coverImage, date, title } = Astro.props;
 ---
 
-<BaseLayout className="" title={title}>
+<BaseLayout title={title}>
 	{
 		coverImage && (
-			<div class="absolute left-0 right-0 -z-10">
-				<Image alt="" class="image-filter w-screen" src={coverImage} />
-				<span class="block w-full absolute bottom-0 h-40 bg-gradient-to-b from-transparent to-black" />
+			<div
+				class="fixed top-0 left-0 right-0 -z-10 max-h-screen overflow-hidden image-fade flex justify-center"
+				slot="end"
+			>
+				<Image
+					alt=""
+					class="image-filter w-screen min-w-80"
+					src={coverImage}
+				/>
+				{/* <span class="block w-full absolute bottom-0 h-40 bg-gradient-to-b from-transparent to-black" /> */}
 			</div>
 		)
 	}
-	<div class="pt-[20vh]">
-		<Prose className="bg-black p-10 rounded-t-md">
-			<h1 class="mb-0">{title}</h1>
-			<p class="italic font-light text-base mb-10">
-				<FormattedDate date={date} />
-			</p>
-			<slot />
-		</Prose>
-	</div>
+	<Prose className="bg-black p-10 rounded-md mt-[20vh] mb-10">
+		<h1 class="mb-0">{title}</h1>
+		<p class="italic font-light text-base mb-10">
+			<FormattedDate date={date} />
+		</p>
+		<slot />
+	</Prose>
 </BaseLayout>
