--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -32,10 +32,14 @@ import BaseLayout from '~/layouts/BaseLayout.astro';
 				</a>
 			</li>
 		</ul>
-		<h2 class="flex gap-4 items-baseline mb-10">
-			<span> Latest writings</span>
-			<a class="text-base font-light" href="/blog">See more&hellip;</a>
+		<h2 class="flex flex-col sm:flex-row gap-4 items-baseline mb-10">
+			<span>Latest writings</span>
+			<a class="text-base font-light" href="/blog">Read more&hellip;</a>
 		</h2>
 	</Prose>
 	<PostList limit="3" />
+	<a
+		class="text-base font-light mt-10 block text-violet-500 hover:text-violet-400 transition-colors underline lg:hidden"
+		href="/blog">Read more&hellip;</a
+	>
 </BaseLayout>
