--- a/src/components/PostList.astro
+++ b/src/components/PostList.astro
@@ -1,14 +1,15 @@
 ---
 import { Image } from 'astro:assets';
-import { getCollection } from 'astro:content';
+import { type CollectionEntry } from 'astro:content';
 
 import FormattedDate from '~/components/FormattedDate.astro';
 import { getPostPath } from '~/lib/posts';
 
-const { limit = 9, offset = 0 } = Astro.props;
-const posts = (await getCollection('blog'))
-	.sort((a, b) => b.data.date.valueOf() - a.data.date.valueOf())
-	.slice(offset, limit);
+interface Props {
+	posts: CollectionEntry<'blog'>[];
+}
+
+const { posts } = Astro.props;
 ---
 
 <ul class="grid gap-10 md:grid-cols-2 lg:grid-cols-3">
