--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -1,7 +1,13 @@
 ---
+import { getCollection } from 'astro:content';
+
 import PostList from '~/components/PostList.astro';
 import Prose from '~/components/Prose.astro';
 import BaseLayout from '~/layouts/BaseLayout.astro';
+
+const posts = (await getCollection('blog'))
+	.sort((a, b) => b.data.date.valueOf() - a.data.date.valueOf())
+	.slice(0, 3);
 ---
 
 <BaseLayout>
@@ -37,7 +43,7 @@ import BaseLayout from '~/layouts/BaseLayout.astro';
 			<a class="text-base font-light" href="/blog">Read more&hellip;</a>
 		</h2>
 	</Prose>
-	<PostList limit="3" />
+	<PostList posts={posts} />
 	<a
 		class="text-base font-light mt-10 block text-violet-500 hover:text-violet-400 transition-colors underline lg:hidden"
 		href="/blog">Read more&hellip;</a
