--- a/src/pages/blog/[year]/[month]/[...slug].astro
+++ b/src/pages/blog/[year]/[month]/[...slug].astro
@@ -1,16 +1,15 @@
 ---
 import type { GetStaticPaths, InferGetStaticPropsType } from 'astro';
 
-import { getCollection } from 'astro:content';
 import { render } from 'astro:content';
 
 import BlogPost from '~/layouts/BlogPost.astro';
-import { getPostParams } from '~/lib/posts';
+import { getPostParams, getPosts } from '~/lib/posts';
 
 type Props = InferGetStaticPropsType<typeof getStaticPaths>;
 
 export const getStaticPaths = (async () => {
-	const posts = await getCollection('blog');
+	const posts = await getPosts();
 	return posts.map((post) => ({
 		params: getPostParams(post),
 		props: post,
