--- a/src/pages/blog/index.astro
+++ b/src/pages/blog/index.astro
@@ -1,12 +1,9 @@
 ---
-import { getCollection } from 'astro:content';
-
 import PostList from '~/components/PostList.astro';
 import BaseLayout from '~/layouts/BaseLayout.astro';
+import { getPosts } from '~/lib/posts';
 
-const posts = (await getCollection('blog'))
-	.sort((a, b) => b.data.date.valueOf() - a.data.date.valueOf())
-	.slice(0, 9);
+const posts = (await getPosts()).slice(0, 9);
 ---
 
 <BaseLayout title="Blog posts">
