--- a/src/pages/category/[slug].astro
+++ b/src/pages/category/[slug].astro
@@ -1,16 +1,17 @@
 ---
 import type { GetStaticPaths, InferGetStaticPropsType } from 'astro';
 
-import { type CollectionEntry, getCollection } from 'astro:content';
+import { type CollectionEntry } from 'astro:content';
 
 import PostList from '~/components/PostList.astro';
 import Prose from '~/components/Prose.astro';
 import BaseLayout from '~/layouts/BaseLayout.astro';
+import { getPosts } from '~/lib/posts';
 
 type Props = InferGetStaticPropsType<typeof getStaticPaths>;
 
 export const getStaticPaths = (async () => {
-	const posts = await getCollection('blog');
+	const posts = await getPosts();
 
 	const categoryPosts: Record<string, CollectionEntry<'blog'>[]> = {};
 	for (const post of posts) {
@@ -30,8 +31,11 @@ const { category, posts } = Astro.props;
 ---
 
 <BaseLayout>
-	<Prose as="header" className="mb-10">
-		<h1>{category}</h1>
-	</Prose>
+	<h1 class="font-thin text-6xl text-center mb-10">
+		Posts filed as:
+		<strong class="font-normal capitalize">
+			{category}
+		</strong>
+	</h1>
 	<PostList posts={posts} />
 </BaseLayout>
