--- a/src/pages/blog/[year]/index.astro
+++ b/src/pages/blog/[year]/index.astro
@@ -24,7 +24,7 @@ const { posts, year } = Astro.props;
 ---
 
 <BaseLayout>
-	<Prose as="header" className="mb-10">
+	<Prose as="header" class="my-10">
 		<h1>
 			Posts from: <strong class="font-normal">{year}</strong>
 		</h1>
