--- a/src/layouts/BlogPost.astro
+++ b/src/layouts/BlogPost.astro
@@ -10,7 +10,7 @@ import BaseLayout from './BaseLayout.astro';
 
 type Props = CollectionEntry<'blog'>['data'];
 
-const { categories, coverImage, date, title } = Astro.props;
+const { categories = [], coverAlt, coverImage, date, title } = Astro.props;
 ---
 
 <BaseLayout title={title}>
@@ -21,15 +21,14 @@ const { categories, coverImage, date, title } = Astro.props;
 				slot="end"
 			>
 				<Image
-					alt=""
+					alt={coverAlt ?? ''}
 					class="image-filter w-screen min-w-80"
 					src={coverImage}
 				/>
-				{/* <span class="block w-full absolute bottom-0 h-40 bg-gradient-to-b from-transparent to-black" /> */}
 			</div>
 		)
 	}
-	<Prose className="bg-black p-10 rounded-md mt-[20vh] mb-10">
+	<Prose class="bg-black p-10 rounded-md mt-[20vh] mb-10">
 		<h1 class="mb-0">{title}</h1>
 		<p class="italic font-light text-base mb-10">
 			<FormattedDate date={date} />
