add my pronouns page

--- a/src/layouts/BlogPost.astro
+++ b/src/layouts/BlogPost.astro
@@ -28,7 +28,12 @@ const { categories = [], coverAlt, coverImage, date, title } = Astro.props;
 			</div>
 		)
 	}
-	<Prose class="bg-black p-10 rounded-md mt-[20vh] mb-10">
+	<Prose
+		class:list={[
+			'bg-black p-10 rounded-md mb-10',
+			coverImage && 'mt-[20vh]',
+		]}
+	>
 		<h1 class="mb-0">{title}</h1>
 		<p class="italic font-light text-base mb-10">
 			<FormattedDate date={date} />
