--- a/src/pages/blog/index.astro
+++ b/src/pages/blog/index.astro
@@ -8,7 +8,7 @@ const posts = await getPosts();
 ---
 
 <BaseLayout title="My Writings">
-	<Prose as="header" class="my-10">
+	<Prose as="header" class="mt-10 mb-12">
 		<h1>My Writings</h1>
 	</Prose>
 	<PostList posts={posts} />
