make gradient placeholders

--- a/src/layouts/BlogPost.astro
+++ b/src/layouts/BlogPost.astro
@@ -17,7 +17,7 @@ const { categories = [], coverAlt, coverImage, date, title } = Astro.props;
 	{
 		coverImage && (
 			<div
-				class="fixed top-0 left-0 right-0 -z-10 max-h-screen overflow-hidden image-fade flex justify-center"
+				class="fixed top-0 left-0 right-0 -z-10 max-h-screen overflow-hidden flex justify-center"
 				slot="end"
 			>
 				<Image
