add aria attributes for improved accessibility in footer, header, and blog post components

--- a/src/components/FormattedDate.astro
+++ b/src/components/FormattedDate.astro
@@ -6,7 +6,7 @@ interface Props {
 const { date } = Astro.props;
 ---
 
-<time datetime={date.toISOString()}>
+<time aria-label="Publish date" datetime={date.toISOString()}>
 	{
 		date.toLocaleDateString('en-us', {
 			day: 'numeric',
