--- a/src/components/Footer.astro
+++ b/src/components/Footer.astro
@@ -4,7 +4,7 @@ import { SITE_TITLE } from '~/consts';
 const year = new Date().getFullYear();
 ---
 
-<footer class="bg-black px-10">
+<footer aria-label="Site footer" class="bg-black px-10">
 	<div class="font-light max-w-screen-2xl mx-auto py-10">
 		{SITE_TITLE}, {year}
 	</div>
