--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -46,14 +46,20 @@ const posts = (await getCollection('blog'))
 				<a href="https://echo.tumblr.com" rel="me noreferrer">Tumblr</a>
 			</li>
 		</ul>
-		<h2 class="flex flex-col sm:flex-row gap-4 items-baseline mb-10">
-			<span>Latest writings</span>
-			<a class="text-base font-light" href="/blog">Read more&hellip;</a>
-		</h2>
 	</Prose>
-	<PostList posts={posts} />
-	<a
-		class="text-base font-light mt-10 block text-violet-500 hover:text-violet-400 transition-colors underline lg:hidden"
-		href="/blog">Read more&hellip;</a
-	>
+	<section aria-labelledby="latest-writings" class="mt-10">
+		<Prose as="header">
+			<h2 class="flex flex-col sm:flex-row gap-4 items-baseline mb-10">
+				<span id="latest-writings">Latest writings</span>
+				<a class="text-base font-light" href="/blog"
+					>Read more&hellip;</a
+				>
+			</h2>
+		</Prose>
+		<PostList posts={posts} />
+		<a
+			class="text-base font-light mt-10 block text-violet-500 hover:text-violet-400 transition-colors underline lg:hidden"
+			href="/blog">Read more&hellip;</a
+		>
+	</section>
 </BaseLayout>
