--- a/src/pages/blog/[year]/index.astro
+++ b/src/pages/blog/[year]/index.astro
@@ -23,9 +23,9 @@ export const getStaticPaths = (async () => {
 const { posts, year } = Astro.props;
 ---
 
-<BaseLayout title={`Posts from ${year}`}>
+<BaseLayout aria-labelledby="title">
 	<Prose as="header" class="my-10">
-		<h1>
+		<h1 id="title" itemprop="headline">
 			Posts from: <strong class="font-normal">{year}</strong>
 		</h1>
 	</Prose>
