--- a/src/components/BaseHead.astro
+++ b/src/components/BaseHead.astro
@@ -23,6 +23,12 @@ const { description, image = '/blog-placeholder-1.jpg', title } = Astro.props;
 <link href="/favicon.svg" rel="icon" type="image/svg+xml" />
 <meta content={Astro.generator} name="generator" />
 
+<script
+	data-id="b8bf436e-c545-43aa-bb4d-e03697bc5bd2"
+	data-utcoffset="1"
+	src="https://cdn.counter.dev/script.js"
+	type="text/partytown"></script>
+
 <!-- Font preloads -->
 <link
 	as="font"
@@ -53,8 +59,3 @@ const { description, image = '/blog-placeholder-1.jpg', title } = Astro.props;
 <meta content={title} property="twitter:title" />
 <meta content={description} property="twitter:description" />
 <meta content={new URL(image, Astro.url)} property="twitter:image" />
-
-<!-- Schema.org -->
-<meta content={title} itemprop="name" />
-<meta content={description} itemprop="description" />
-<meta content={Astro.url} itemprop="url" />
