remove Partytown integration and update script loading in BaseLayout

--- a/src/layouts/BaseLayout.astro
+++ b/src/layouts/BaseLayout.astro
@@ -45,5 +45,9 @@ if (propTitle) {
 		</main>
 		<Footer />
 		<slot name="end" />
+		<script
+			data-id="b8bf436e-c545-43aa-bb4d-e03697bc5bd2"
+			data-utcoffset="1"
+			src="https://cdn.counter.dev/script.js"></script>
 	</body>
 </html>
