fix mistakes with linting setup and applies fixes

--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -22,6 +22,11 @@ const posts = (await getCollection('blog'))
 		<p>Feel free to browse around or look me up on various social media:</p>
 		<ul>
 			<li>
+				<a href="https://github.com/ChaosExAnima" rel="me noreferrer">
+					GitHub
+				</a>
+			</li>
+			<li>
 				<a
 					href="https://bsky.app/profile/echo.ishella.gay"
 					rel="me noreferrer"
