fix headline sizes

--- a/src/components/Prose.astro
+++ b/src/components/Prose.astro
@@ -9,7 +9,7 @@ const { as: Component = 'article', class: className } = Astro.props;
 
 <Component
 	class:list={[
-		'prose prose-invert prose-violet sm:prose-xl prose-stone mx-auto',
+		'prose prose-invert prose-violet prose-xl prose-stone mx-auto',
 		'prose-headings:font-thin hover:prose-a:text-violet-400 prose-a:transition-colors',
 		'prose-h1:text-[length:var(--title-size)]',
 		className,
